@@ -198,7 +198,7 @@ public class DirectUpdateHandler2 extends UpdateHandler implements SolrCoreState
 
           Document luceneDocument = cmd.getLuceneDocument();
           // SolrCore.verbose("updateDocument",updateTerm,luceneDocument,writer);
-          writer.updateDocument(updateTerm, luceneDocument);
+          writer.updateDocument(updateTerm, luceneDocument, schema.getAnalyzer());
           // SolrCore.verbose("updateDocument",updateTerm,"DONE");
 
 
@@ -219,7 +219,7 @@ public class DirectUpdateHandler2 extends UpdateHandler implements SolrCoreState
 
       } else {
         // allow duplicates
-        writer.addDocument(cmd.getLuceneDocument());
+        writer.addDocument(cmd.getLuceneDocument(), schema.getAnalyzer());
         if (ulog != null) ulog.add(cmd);
       }
 
@@ -371,7 +371,7 @@ public class DirectUpdateHandler2 extends UpdateHandler implements SolrCoreState
     synchronized (this) {
       IndexWriter writer = solrCoreState.getIndexWriter(core);
 
-      writer.updateDocument(idTerm, luceneDocument);
+      writer.updateDocument(idTerm, luceneDocument, core.getSchema().getAnalyzer());
 
       for (Query q : dbqList) {
         writer.deleteDocuments(q);
