@@ -46,6 +46,9 @@ Bug Fixes
 
 * SOLR-3467: ExtendedDismax escaping is missing several reserved characters
   (Michael Dodsworth via janhoy)
+  
+* SOLR-3587: After reloading a SolrCore, the original Analyzer is still used rather than a new 
+  one. (Alexey Serba, yonik, rmuir, Mark Miller)
 
 Other Changes
 
